frontend/src/app/main.css
@import "tailwindcss";

@tailwindcss /preflight;
@tailwindcss /utilities;

@theme {
  /** custom css variable name convention:
  *     -namespace-token
  *             OR
  *     -namespace-ac-token
  *   where:
  * namespace - eg: color
  * --ac - for custom css variables (aster craft)
  * token - eg: btn-action
  */
  --color-ac-btn-action: oklch(92% 0.004 286.32);
  --color-ac-input-start-projec: #f6f6f6;
  --color-ac-section-divider: #d0d0d0;
  --color-ac-btn-slider-navigation: #cccfcf;
  --color-ac-paragraph-light: #8a8a8a;
  --color-ac-link-email: #1a1a1a;
  --color-ac-eerie-black: #1a1a1a;
  --color-ac-black-wash: #0b0d0d;

  --color-ac-text: #ffffff;
  --color-ac-text-muted: oklch(0.7 0 340);

  --color-ac-bg-dark: #1a1a1a;
  --color-ac-bg: oklch(0.96 0 340);
  --color-ac-bg-light: oklch(1 0 340);

  /* --color-ac-highlight: oklch(1 0 340);
  --color-ac-border: oklch(0.6 0 340);
  --color-ac-border-muted: oklch(0.7 0 340);
  --color-ac-primary: oklch(0.4 0.1 340);
  --color-ac-secondary: oklch(0.4 0.1 160);
  --color-ac-danger: oklch(0.5 0.05 30);
  --color-ac-warning: oklch(0.5 0.05 100);
  --color-ac-success: oklch(0.5 0.05 160);
  --color-ac-info: oklch(0.5 0.05 260); */
}

@layer components {
  .Container {
    @apply mx-auto w-full max-w-[1450px] px-[15px];
  }

  .app-container {
    @apply mx-auto w-full max-w-[1450px] px-[15px];
  }
}

html {
  scroll-behavior: smooth;
}

section {
  scroll-margin-top: 80px;
}

html,
body {
  overflow-x: hidden;
  max-width: 100%;
  width: 100%;
}

* {
  max-width: 100%;
}

*,
*::before,
*::after {
  box-sizing: border-box;
}

body {
  overflow-x: hidden;
  max-width: 100%;
  width: 100%;
  position: relative;
}

img {
  max-width: 100%;
  height: auto;
}

p,
h1,
h2,
h3,
h4,
h5,
h6,
span,
a {
  overflow-wrap: break-word;
  word-wrap: break-word;
  word-break: break-word;
}

